# zippee

./: CMakeLists.txt  bitspan.cpp  bitspan.hpp  bitspan.tests.cpp  crc32.cpp  crc32.hpp  crc32.tests.cpp  deflate.cpp  deflate.hpp  deflate.tests.cpp  main.cpp  readme.md  zip.cpp  zip.hpp  zip.tests.cpp
